language/tools/move-cli/tests/testsuite/verify_native_functions_in_publish/args.exp
Command `sandbox publish`:
error[E02007]: invalid 'fun' declaration
  ┌─ ./sources/example.move:3:16
  │
3 │     native fun create_nothing();
  │                ^^^^^^^^^^^^^^ Missing implementation for the native function M::create_nothing

